--- a/config/test.yaml
+++ b/config/test.yaml
@@ -1,4 +1,5 @@
-verbose: true
+# Make a copy of this file, replace corresponding paths, and don't push you config every time
+verbose: False
 log_dir: "./logs/"
 encoder_type: conv
 decoder_type: deconv
@@ -15,13 +16,20 @@ quantize: 256
 ##################################
 
 ############# Training ############
-learning_rate: 0.8
-num_epochs: 10
-batch_size: 2
+learning_rate: 0.0002
+train_val_split: 0.8
+num_epochs: 5
+batch_size: 64
 use_cuda: true
 use_speaker_conditioning: false
+record_codebook_stats: False
+record_gradient_stats: False
+normalize: true
+normalizer_path: "/Users/dimi/Coding/neural-compression/data/vctk/vctk-mfcc-stats.pickle"
+vctk_path: "/Users/dimi/Coding/neural-compression/data/vctk"
 log_period: 1
 checkpoint_period: 1
+features_path: 'features'
 ##################################
 
 ############# Encoder ############
