--- a/config/test.yaml
+++ b/config/test.yaml
@@ -1,5 +1,5 @@
 # Make a copy of this file, replace corresponding paths, and don't push you config every time
-verbose: False
+verbose: false
 log_dir: "./logs/"
 encoder_type: conv
 decoder_type: deconv
@@ -18,15 +18,15 @@ quantize: 256
 ############# Training ############
 learning_rate: 0.0002
 train_val_split: 0.8
-num_epochs: 20
-batch_size: 1
+num_epochs: 5
+batch_size: 64
 use_cuda: true
-use_speaker_conditioning: false
+use_speaker_conditioning: true
 record_codebook_stats: False
 record_gradient_stats: False
 normalize: true
-normalizer_path: "/home/dantic/neural-compression/data/vctk/vctk-mfcc-stats.pickle"
-vctk_path: "/home/dantic/neural-compression/data/vctk"
+normalizer_path: "/Users/dimi/Coding/neural-compression/data/vctk/vctk-mfcc-stats.pickle"
+vctk_path: "/Users/dimi/Coding//neural-compression/data/vctk"
 log_period: 1
 checkpoint_period: 1
 features_path: 'features'
@@ -68,7 +68,7 @@ input_features_filters: 13
 output_features_dim: 47
 output_features_filters: 13
 augment_input_features: true
-augment_output_features: true
+augment_output_features: false
 ##################################
 
 eval:
