--- a/config/wavenet.yaml
+++ b/config/wavenet.yaml
@@ -2,7 +2,7 @@
 verbose: false
 log_dir: "./logs/"
 encoder_type: conv
-decoder_type: deconv
+decoder_type: wavenet
 
 ############# Audio ############
 sampling_rate: 16000 # Sampling rate
@@ -18,18 +18,18 @@ quantize: 256
 ############# Training ############
 learning_rate: 0.0002
 train_val_split: 0.8
-num_epochs: 5
-batch_size: 64
+num_epochs: 10
+batch_size: 1
 use_cuda: true
 use_speaker_conditioning: true
 record_codebook_stats: False
 record_gradient_stats: False
 normalize: true
 normalizer_path: "/Users/dimi/Coding/neural-compression/data/vctk/vctk-mfcc-stats.pickle"
-vctk_path: "/Users/dimi/Coding//neural-compression/data/vctk"
+vctk_path: "/Users/dimi/Coding/neural-compression/data/vctk"
 log_period: 1
 checkpoint_period: 1
-features_path: 'features'
+features_path: 'feature'
 ##################################
 
 ############# Encoder ############
@@ -50,25 +50,35 @@ residual_channels: 768
 num_residual_layers: 2
 ##################################
 
+# WaveNet Decoder
+n_loop: 2
+# n_layers should be much bigger value eg. 20
+n_layers: 4 # n_layers % n_loop == 0
+filter_size: 3
+gate_channels: 768
+skip_out_channels: 256
+global_condition_dim: 128
+local_condition_dim: 768
+wavenet_type: "WaveNet"
+
 ############# Conv ############
 use_kaiming_normal: false
 ##################################
 
 ############# Jitter ############
 jitter_probability: 0.12
-use_jitter: false
+use_jitter: true
 ##################################
 
 
 ############# Features ############
 input_features_type: mfcc
-output_features_type: mfcc
 input_features_dim: 47
 input_features_filters: 13
 output_features_dim: 47
-output_features_filters: 13
-augment_input_features: true
-augment_output_features: false
+output_features_filters: 79
+augment_input_features: True
+augment_output_features: False
 ##################################
 
 eval:
