--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ ipython_config.py
 
 # pyenv
 .python-version
+.idea/
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -135,3 +136,9 @@ data/
 .DS_Store
 notebooks/
 logs/
+
+data/vctk
+
+train.png
+valid.png
+pretrained
